<resources>
    <string name="app_name">Product booking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="internet_error">Check your internet connection.</string>
    <string name="login">Login</string>
    <string name="login_here">Login Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile">Mobile</string>
    <string name="city">City</string>
    <string name="address_2">Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="full_name">Full Name</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="add_item">Add Item</string>
    <string name="sender">Sender</string>
    <string name="items_not_found">Items not found</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="number_of_items_ordered">Number of items ordered</string>
</resources>
