<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <TextView
        android:text="@string/login_here"
        android:textSize="35sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_edt_bg"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_edt_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/button"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_blue"
        android:text="@string/login"
         />


</LinearLayout>