<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtUserEmail"
            android:text="@string/email_id"
            android:layout_marginTop="7dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtUserNumber"
            android:text="@string/phone_number"
            android:layout_marginTop="7dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>

    <ImageView
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_width="15dp"
        android:layout_gravity="center_vertical"
        android:layout_height="15dp" />



</LinearLayout>