<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".fragments.FragItemDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/item_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtShowItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:maxLines="2"

            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/size"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtShowItemSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:text="@string/app_name"

            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/quantity"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtShowItemQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:text="@string/app_name"

            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/price"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtShowItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:text="@string/app_name"

            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/sender"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtSenderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:maxLines="2"

            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>