<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".fragments.FragItemDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtShowUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:maxLines="2"

            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/email_id"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtShowUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtShowUserNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:text="@string/app_name"

            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtShowUserAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/txtShowUserCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/number_of_items_ordered"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtUserOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>